--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <div class="dail-button">*</div>
                 <div class="dail-button">0</div>
                 <div class="dail-button">#</div>
-                <div class="dail-button dail-down">|</div>
-                <div class="dail-button dail-cancel">&lt;-</div>
+                <div class="dail-button dail-down "><i class="fa-solid fa-arrow-down"></i></div>
+                <div class="dail-button dail-cancel"><i class="fa-solid fa-delete-left"></i></div>
             </div>
         </div>
         <div class="bottom-bar">
